Begin extracting library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,34 +19,34 @@ set(CMAKE_CXX_FLAGS "--std=c++11 ${CMAKE_CXX_FLAGS}")
 add_executable(dhc
     ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/lexer/lexer.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/scanner.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/match.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern/character.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern/choice.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern/compound.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern/exclude.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern/repetition.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern/string.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/match/character.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/match/sequence.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/match/string.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/scanner.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/match.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern/character.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern/choice.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern/compound.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern/exclude.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern/repetition.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern/string.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/match/character.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/match/sequence.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/match/string.cpp
 )
 
 # add a test executable
 add_executable(hl
     ${CMAKE_CURRENT_SOURCE_DIR}/highlight.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/lexer/lexer.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/scanner.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/match.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern/character.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern/choice.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern/compound.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern/exclude.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern/repetition.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/pattern/string.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/match/character.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/match/sequence.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/match/string.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/scanner.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/match.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern/character.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern/choice.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern/compound.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern/exclude.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern/repetition.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/pattern/string.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/match/character.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/match/sequence.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/graft/match/string.cpp
 )
