Start using Unicode library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,9 @@ project(dhc)
 #set(VERBOSE, ON)
 #SET(DEBUG, ON)
 
-#set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeScripts")
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeScripts")
+
+find_package(ICU 4.4 REQUIRED)
 
 # set some output directories
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
@@ -14,6 +16,10 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # ensure that the cxx files get compiled with c++11 support enabled
 set(CMAKE_CXX_FLAGS "--std=c++11 ${CMAKE_CXX_FLAGS}")
+
+include_directories(
+    ${ICU_INCLUDE_DIRS}
+)
 
 # build graft as a standalone library
 set(GRAFT_LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/graft)
@@ -40,6 +46,7 @@ add_executable(dhc
 
 target_link_libraries(dhc
     graft
+    ${ICU_LIBRARIES}
 )
 
 # add a test executable
@@ -50,4 +57,5 @@ add_executable(hl
 
 target_link_libraries(hl
     graft
+    ${ICU_LIBRARIES}
 )
