Use Unicode properties to parse

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,8 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # ensure that the cxx files get compiled with c++11 support enabled
-set(CMAKE_CXX_FLAGS "--std=c++11 ${CMAKE_CXX_FLAGS}")
+# and also that the compiler complains a lot
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror --std=c++11 ${CMAKE_CXX_FLAGS} -pedantic")
 
 include_directories(
     ${ICU_INCLUDE_DIRS}
@@ -28,6 +29,7 @@ add_library (graft
     ${GRAFT_LIB_SRC}/pattern.cpp
     ${GRAFT_LIB_SRC}/match.cpp
     ${GRAFT_LIB_SRC}/pattern/character.cpp
+    ${GRAFT_LIB_SRC}/pattern/property.cpp
     ${GRAFT_LIB_SRC}/pattern/choice.cpp
     ${GRAFT_LIB_SRC}/pattern/compound.cpp
     ${GRAFT_LIB_SRC}/pattern/exclude.cpp
