--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,17 @@ project(dhc)
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeScripts")
 
 find_package(ICU 4.4 REQUIRED)
+find_package(Doxygen)
+
+if (DOXYGEN_FOUND)
+    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in
+    ${CMAKE_BINARY_DIR}/Doxyfile @ONLY)
+    add_custom_target(doc
+        ${DOXYGEN_EXECUTABLE} ${CMAKE_BINARY_DIR}/Doxyfile
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+        COMMENT "Generating API documentation with Doxygen" VERBATIM
+    )
+endif(DOXYGEN_FOUND)
 
 # set some output directories
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
@@ -20,10 +31,11 @@ set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror --std=c++11 ${CMAKE_CXX_FLAGS} -pedan
 
 include_directories(
     ${ICU_INCLUDE_DIRS}
+    ${CMAKE_CURRENT_SOURCE_DIR}/lib
 )
 
 # build graft as a standalone library
-set(GRAFT_LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/graft)
+set(GRAFT_LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/lib/graft)
 add_library (graft
     ${GRAFT_LIB_SRC}/scanner.cpp
     ${GRAFT_LIB_SRC}/pattern.cpp
