Start adding tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,3 +73,12 @@ target_link_libraries(hl
     graft
     ${ICU_LIBRARIES}
 )
+
+add_executable(tests
+    ${CMAKE_CURRENT_SOURCE_DIR}/tests/tests.cpp
+)
+
+target_link_libraries(tests
+    graft
+    ${ICU_LIBRARIES}
+)
