Add match post-processing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,12 @@ add_library (graft
 add_executable(dhc
     ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/lexer/lexer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/digit.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/integer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/qualified.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/lit_char.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/lit_string.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/lit_float.cpp
 )
 
 target_link_libraries(dhc
@@ -64,12 +70,18 @@ target_link_libraries(dhc
 )
 
 # add a test executable
-add_executable(hl
-    ${CMAKE_CURRENT_SOURCE_DIR}/highlight.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/lexer.cpp
-)
+#add_executable(hl
+#    ${CMAKE_CURRENT_SOURCE_DIR}/highlight.cpp
+#    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/lexer.cpp
+#    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/digit.cpp
+#    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/integer.cpp
+#    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/qualified.cpp
+#    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/lit_char.cpp
+#    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/lit_string.cpp
+#    ${CMAKE_CURRENT_SOURCE_DIR}/lexer/lit_float.cpp
+#)
 
-target_link_libraries(hl
-    graft
-    ${ICU_LIBRARIES}
-)
+#target_link_libraries(hl
+#    graft
+#    ${ICU_LIBRARIES}
+#)
