Clean up lexer directory

--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -743,7 +743,7 @@ WARN_LOGFILE           =
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@ @CMAKE_CURRENT_SOURCE_DIR@/lib/graft @CMAKE_CURRENT_SOURCE_DIR@/lib/graft/match @CMAKE_CURRENT_SOURCE_DIR@/lib/graft/pattern @CMAKE_CURRENT_SOURCE_DIR@/lexer
+INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@ @CMAKE_CURRENT_SOURCE_DIR@/lib/graft @CMAKE_CURRENT_SOURCE_DIR@/lib/graft/match @CMAKE_CURRENT_SOURCE_DIR@/lib/graft/pattern @CMAKE_CURRENT_SOURCE_DIR@/lib/graft/scanner @CMAKE_CURRENT_SOURCE_DIR@/lexer @CMAKE_CURRENT_SOURCE_DIR@/lexer/match
 
 
 
