--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,15 @@ add_executable(dhc
     ${CMAKE_CURRENT_SOURCE_DIR}/lexer/match/lit_string.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/lexer/match/lit_float.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/parser/parser.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/expression/application.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/expression/case.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/expression/variable.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/expression/value/function.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/expression/value/uservalue.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/pattern/variable.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/pattern/constructor.cpp
 )
 
 message("ICU: " ${ICU_LIBRARIES})
